--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
 
     
 
@@ -71,7 +71,7 @@
                 <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">
                     herramientas para aprendizaje virtual</h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-7">
-                    Hola profesores en este espacio encontraran una serie de videos con el fin de proporcionarles herramientas necesarias para poder desarrollar clases de manera virtual con la mayor agilidad y eficacia para sus clases espero les sea útil.</p>
+                    Hola profesores en este espacio encontraran una serie de videos y herramientas, para poder desarrollar clases virtuales con la mayor agilidad y eficacia con sus estudiantes, espero les sea útil esta información.</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="index.html#features1-8">COMENZAR</a></div>
             </div>
         </div>
