--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
 
     
 
