--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
 
     
 
@@ -142,7 +142,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-img pb-3">
-                    <a href="https://drive.google.com/drive/folders/1-DgZhUv7fNlZBUnmmujM3_9N_aCg_9h8?usp=sharing" target="_blank"><span class="mbr-iconfont mbrib-video"></span></a>
+                    <a href="https://youtu.be/qydg996YOHI" target="_blank"><span class="mbr-iconfont mbrib-video"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">3· SUBIR VIDEOS
