--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta name="description" content="diseño gráfico virtual - UNICESMAG">
   
   <title>virtualdgraf</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
 
     
 
@@ -72,7 +72,7 @@
                     herramientas para aprendizaje virtual</h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-7">
                     Hola profesores en este espacio encontraran una serie de videos y herramientas, para poder desarrollar clases virtuales con la mayor agilidad y eficacia posible con sus estudiantes, espero les sea útil esta información.</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="index.html#features1-8">COMENZAR</a></div>
+                
             </div>
         </div>
     </div>
