--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   
   <title>virtualdgraf</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
 
     
 
@@ -67,11 +67,11 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">VIRTUAL DISEÑO GRÁFICO &nbsp;</h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">VIRTUAL <br>DISEÑO GRÁFICO &nbsp;</h1>
                 <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">
                     herramientas para aprendizaje virtual</h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-7">
-                    Hola profesores en este espacio encontraran una serie de videos y herramientas, para poder desarrollar clases virtuales con la mayor agilidad y eficacia posible con sus estudiantes, espero les sea útil esta información.</p>
+                    Hola profesores en este espacio encontraran una serie de videos y herramientas, para poder desarrollar clases virtuales con la mayor agilidad y eficacia posible con sus estudiantes, espero les sea útil esta información.<br><br><strong><em>"Solo deben hacer click en los iconos que encontraran para ir al material en video."</em></strong></p>
                 
             </div>
         </div>
@@ -89,7 +89,7 @@
 
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-img pb-3">
-                    <a href="https://youtu.be/piPdsTMgvgk" target="_blank"><span class="mbr-iconfont mbrib-question" style="color: rgb(91, 104, 107); fill: rgb(91, 104, 107);"></span></a>
+                    <a href="https://youtu.be/piPdsTMgvgk" target="_blank"><span class="mbr-iconfont mbri-website-theme" style="color: rgb(91, 104, 107); fill: rgb(91, 104, 107);"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">¿Porque?</h4>
@@ -246,12 +246,12 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
