create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
 
     
 
@@ -142,7 +142,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-img pb-3">
-                    <a href="https://youtu.be/0RwqtwUYm4w" target="_blank"><span class="mbr-iconfont mobi-mbri-video mobi-mbri"></span></a>
+                    <a href="https://youtu.be/0RwqtwUYm4w" target="_blank"><span class="mbr-iconfont mbrib-users"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">3· GOOGLE
@@ -182,7 +182,7 @@
                     <a href="https://youtu.be/aCV_iXcINOc" target="_blank"><span class="mbr-iconfont mbrib-cloud"></span></a>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title py-3 mbr-fonts-style display-5">5· VINCULAR<br>CUENTAS</h4>
+                    <h4 class="card-title py-3 mbr-fonts-style display-5">5· GOOGLE<br>FILE STREAM</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         Instalar y usar filestream como unidad de almacenamiento ilimitado </p>
                 </div>
@@ -206,7 +206,7 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">7· GOOGLE
 <div>CLASSROOM</div></h4>
-                    <p class="mbr-text mbr-fonts-style display-7">Gestionar las actividades para estudiantes </p>
+                    <p class="mbr-text mbr-fonts-style display-7">Gestionar las actividades para las clases con estudiantes </p>
                 </div>
             </div>
 
