create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header1 cid-rTzZa0DIU8 mbr-parallax-background" id="header16-9">
 
     
 
@@ -278,7 +278,7 @@
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Organiza el material</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
+                            Organiza en carpetas todo el material que sea necesario para tu clase, y subelos a tu drive para poderlo compartir de una manera mas sencilla a tus estudiantes
                         </p>
                      </div>
                 </div>
@@ -293,7 +293,7 @@
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Crea la Clase</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
+                            Crea la clase para cada materia, agregando a tus estudiantes y otros profesores de serlo necesario, organiza las semanas para las actividades, crea el contenido del material que ya tienes organizado, planea tus entregas y asigna fechas para su realización. 
                         </p>
                     </div>
                 </div>
@@ -308,7 +308,7 @@
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Graba el material de la Clase</h4>      
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
+                            Usa las herramientas proporcionadas para realizar tus clases o videoconferencias de las mismas con tus estudiantes, graba tus clases y su contenido en formato de video para después subirlo a youtube y poder compartirlo en nuestras clases
                         </p>
                     </div>
                 </div>
@@ -322,7 +322,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Evalúa las actividades</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
+                            Teniendo en cuenta las actividades creadas en classroom evalúa oportunamente para que los estudiantes pueden tener una retroalimentación de sus entregas, carga las notas a nuestro sistema de evaluación RUAH y continua con las actividades.
                         </p>
                     </div>
                 </div>
